crates/app/src/snapshots/tidal_player__ui__tests__ac17_favorite_tracks.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Favorite tracks · 362 tracks                                                  │
│┌Favorite tracks (362)───────────────────────────────────────────────────────┐│
││  1    Song 1                   Pierce The Veil    Album                3:01││
││  2    Song 2                   Pierce The Veil    Album                3:02││
││  3    Not Streamable Here      Pierce The Veil    Misadventures        3:21││
││Loading more…                                                               ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
│└────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
