crates/app/src/snapshots/tidal_player__ui__tests__ac17_roles_popup.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Pierce The Veil                                                               │
│┌All tracks (548 · 37 hidden)  [ ]───────────┐┌Albums (78) │ Appears on  [ ]─┐│
││  1    Hell Above        Pierce The…    3:32││Collide With…  Pierce T…  2012││
││  2    Caraphernelia     Pierce The…    4:01││Hold On Till…  Pierce T…  2010││
││                                            ││Pierce The V…  Pierce T…  2008││
││                                            ││                              ││
││                          ┌Roles─────────────────┐                          ││
││                          │ [x] Performer        │                          ││
││                          │ [x] Songwriter       │                          ││
││                          │ [x] Producer         │                          ││
││                          │ [x] Engineer         │                          ││
││                          └──────────────────────┘                          ││
││                                            ││                              ││
││                                            ││                              ││
││                                            ││                              ││
││                                            ││                              ││
││                                            ││                              ││
│└────────────────────────────────────────────┘└──────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
